--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ping.pub",
-  "version": "3.0.0",
-  "private": true,
+  "name": "tea-pingpub",
+  "version": "3.0.1",
+  "private": false,
   "target": "",
   "scripts": {
     "dev": "vite",
@@ -23,13 +23,11 @@
     "@osmonauts/lcd": "^0.8.0",
     "@personaxyz/ad-sdk": "0.0.21",
     "@ping-pub/chain-registry-client": "^0.0.25",
-    "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vueuse/core": "^9.12.0",
     "@vueuse/integrations": "^10.1.2",
     "@vueuse/math": "^9.12.0",
     "apexcharts": "^3.37.1",
     "autoprefixer": "^10.4.14",
-    "axios": "^1.3.2",
     "buffer": "^6.0.3",
     "build": "^0.1.4",
     "cross-fetch": "^3.1.5",
@@ -39,20 +37,20 @@
     "long": "^5.2.1",
     "md-editor-v3": "^2.8.1",
     "numeral": "^2.0.6",
-    "osmojs": "^14.0.0-rc.0",
+    "osmojs": "^16.14.0",
     "pinia": "^2.0.28",
     "postcss": "^8.4.23",
     "qrcode": "^1.5.3",
     "tailwindcss": "^3.3.1",
+    "teaboot": "^1.1.0",
     "theme-change": "^2.5.0",
-    "vite-plugin-vue-layouts": "^0.7.0",
     "vue": "^3.2.45",
     "vue-i18n": "^9.2.2",
     "vue-prism-component": "^2.0.0",
     "vue-router": "^4.1.6",
     "vue3-apexcharts": "^1.4.1",
     "vue3-json-viewer": "^2.2.2",
-    "vue3-perfect-scrollbar": "^1.6.1"
+    "vue3-perfect-scrollbar": "^2.0.0"
   },
   "devDependencies": {
     "@osmonauts/telescope": "^0.88.2",
@@ -60,7 +58,6 @@
     "@types/node": "^18.11.12",
     "@types/numeral": "^2.0.2",
     "@types/semver": "7.5.0",
-    "@vitejs/plugin-vue": "^4.0.0",
     "@vue/tsconfig": "^0.1.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
@@ -70,9 +67,22 @@
     "unplugin-auto-import": "^0.13.0",
     "unplugin-vue-components": "^0.23.0",
     "unplugin-vue-define-options": "1.1.4",
-    "vite": "^4.4.9",
-    "vite-plugin-pages": "^0.28.0",
     "vue-json-viewer": "3",
     "vue-tsc": "^1.0.12"
-  }
+  },
+  "description": "explorer",
+  "main": "postcss.config.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/0xalberlant/Explorer"
+  },
+  "keywords": [
+    "explorer"
+  ],
+  "author": "zoldyck",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/0xalberlant/Explorer/issues"
+  },
+  "homepage": "https://github.com/0xalberlant/Explorer#readme"
 }
